add: backend REST API working, without validation & testing